--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salud mental</title>
     <link rel="stylesheet" href="./index.css">
-    <link rel="icon" href="./assets/icon">
+    <link rel="icon" href="./assets/icon.png">
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
